# keychron_q6_he_rmk

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  cheby.py  memory.x  readme.md  rust-toolchain.toml  rustfmt.toml  vial.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  tests.yml
.zed/: settings.json
poly_gen/: lut.py
q6-core/: Cargo.toml
q6-core/src/: bytes.rs  calib.rs  gamma.rs  lib.rs  lut.rs  math.rs  rapid_trigger.rs
q6-core/src/bytes/: tests.rs
q6-core/src/calib/: tests.rs
q6-core/src/gamma/: tests.rs
q6-core/src/lut/: tests.rs
q6-core/src/math/: tests.rs
q6-core/src/rapid_trigger/: tests.rs
q6-core/tests/: scan_pipeline.rs
src/: analog_matrix.rs  backlight.rs  backlight_indicator.rs  bench.rs  board.rs  eeprom.rs  eeprom_storage.rs  encoder_switch.rs  flash.rs  flash_wrapper.rs  flash_wrapper_async.rs  hc164_cols.rs  keymap.rs  layer_toggle.rs  layout.rs  led_backlight.rs  led_mapping.rs  log.rs  low_power.rs  main.rs  matrix.rs  snled27351_spi.rs  usb_state.rs  vial.rs
src/backlight/: gamma.rs  gamma_correction.rs  init.rs  led_processor.rs  lock_indicator.rs  mapping.rs  processor.rs  render.rs  runner.rs  task.rs
src/layout/: jis.rs  shared.rs
src/layout/ansi/: layout.rs  led.rs  sensor.rs  vial.json
src/layout/iso/: layout.rs  led.rs  sensor.rs  vial.json
src/layout/jis/: layout.rs  led.rs  sensor.rs  vial.json
src/layout/shared/: layout.rs  led.rs  sensor.rs
src/log/: noop.rs
src/matrix/: analog_matrix.rs  calib_store.rs  encoder_switch.rs  hc164_cols.rs  layer_toggle.rs  sensor_mapping.rs  travel_helpers.rs  travel_lut.rs
src/matrix/analog_matrix/: calibration.rs  lut.rs  scan.rs  types.rs
src/snled27351_spi/: driver.rs  led_address.rs  registers.rs
