cargo-features = ["panic-immediate-abort"]

[workspace]

[package]
name = "keychron-q6-he-rmk"
version = "1.2.0"
description = "Keychron Q6 HE keyboard firmware written in Rust using RMK and Embassy"
repository = "https://github.com/fuchskurt/keychron_q6_he_rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
crc = { version = "3", default-features = false }
cortex-m = { version = "0", features = ["critical-section-single-core"] }
cortex-m-rt = "0"
embassy-time = { features = ["tick-hz-1_000_000"], git = "https://github.com/embassy-rs/embassy.git" }
embassy-stm32 = { features = ["stm32f401rc", "memory-x", "time-driver-any", "exti", "unstable-pac"], git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { features = ["platform-cortex-m", "executor-thread"], git = "https://github.com/embassy-rs/embassy.git" }
embedded-storage-async = "0"
rmk = { default-features = false, features = ["async_matrix", "storage", "vial", "vial_lock"], git = "https://github.com/HaoboGu/rmk.git" }
static_cell = "2"
snled27351_driver = { git = "https://github.com/fuchskurt/snled27351_driver.git" }
embedded-hal-async = "1"
num-traits = { version = "0", default-features = false, features = ["libm"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }

[build-dependencies]
lzma-rust2 = "0"
serde_json = { version = "1", features = ["preserve_order"] }


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
restriction = "deny"
nursery = "deny"
blanket_clippy_restriction_lints = "allow"
future_not_send = "allow"
implicit_return = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
self_named_module_files = "allow"
pub_with_shorthand = "allow"
pub_use = "allow"

[lints]
workspace = true

[[bin]]
name = "keychron-q6-he-rmk"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
strip = "symbols"
opt-level = "s"
overflow-checks = false
lto = "fat"
panic = "immediate-abort"